# DM-Tool

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  PERFORMANCE_INTELLIGENCE.md  README.md  package.json  pnpm-lock.yaml  render.yaml  turbo.json
apps/api/: README.md  alembic.ini  package.json  pyproject.toml  start.sh
apps/api/.claude/: launch.json
apps/api/aicmo/: config.py  main.py
apps/api/aicmo/auth/: clerk.py  clerk_admin.py  clerk_profile.py  clerk_webhook.py
apps/api/aicmo/cache/: redis_cache.py
apps/api/aicmo/copy/: __init__.py  banned_phrases.py  creative_brief.py
apps/api/aicmo/db/: base.py  rls.py  session.py
apps/api/aicmo/distribution/: cta_lint.py  url_builder.py
apps/api/aicmo/llm/: __init__.py  router.py
apps/api/aicmo/middleware/: rate_limit.py  request_id.py  security_headers.py
apps/api/aicmo/observability/: __init__.py  alerts.py  health.py  router.py  sentry.py  slow_queries.py
apps/api/aicmo/providers/: __init__.py
apps/api/aicmo/queue/: context.py  deps.py  enqueue.py  reference.py  worker.py
apps/api/aicmo/security/: captcha.py  csv_safety.py  models.py  prompt_safety.py  rate_limit.py  ssrf.py
apps/api/aicmo/tenancy/: __init__.py  context.py  dependencies.py  exceptions.py  headers.py  permissions.py  queries.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_business_profiles.py  0002_trend_reports.py  0003_generated_content.py  0004_generated_ads.py  0005_generated_visuals.py  0006_campaign_plans.py  0007_lead_capture.py  0008_business_profile_v2.py  0009_bundles.py  0010_rendered_visuals.py  0011_social_intelligence.py  0012_learning_lab.py  0013_saas_foundation.py  0014_rbac_foundation.py  0015_tenant_columns.py  0016_backfill_orgs_brands.py  0017_tenant_not_null.py  0018_audit_events.py  0019_business_profile_persona.py  0020_performance_intelligence.py  0021_perf_intel_kinds.py  0022_integrations.py  0023_notifications.py  0024_security.py  0025_analyst_role.py  0026_org_invites.py  0027_billing.py  0028_org_profile.py  0029_brand_profile.py  0030_ai_audit_events.py  0031_tenant_performance_indexes.py  0032_rls_policies.py  0033_billing_live.py  0034_creative_core.py  0035_creative_studio.py  0036_brand_asset_favorite.py  0037_render_asset_links.py  0038_advisor_memory.py  0039_advisor_outcomes.py  0040_connector_metrics.py  (+29 more)
apps/api/scripts/: encrypt_social_tokens.py  rls_activate.py  rls_deactivate.py  validate_platform_audit.py  validate_study_abroad.py  verify_platform_integrations.py
apps/api/scripts/audit_reports/: audit_162567a6bf.json  audit_2db23097e0.json  audit_3c9666e10c.json  audit_dde234f392.json
apps/api/tests/: conftest.py  test_auth_mode.py  test_backup_restore.py  test_cors.py  test_prod_secrets_p0.py  test_request_id.py  test_security_headers.py  test_users_router_wiring.py
apps/api/tests/advisor/: test_brain.py  test_dedupe.py  test_generator_hint.py  test_health.py  test_intelligence.py  test_signals.py
apps/api/tests/auth/: test_clerk_profile.py
apps/api/tests/autonomy/: test_autonomy.py
apps/api/tests/billing/: test_billing_live.py  test_plan_catalog.py  test_router_contract.py  test_schemas.py  test_service_logic.py
(+903 files in other folders)
