[project]
name = "aicmo-api"
version = "0.0.0"
description = "AI-CMO backend API"
requires-python = ">=3.12"
dependencies = [
  # web
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.31",   # Phase 5.7: CVE-2026-53538/53539/53540
  # config
  "pydantic[email]>=2.9.0",
  "pydantic-settings>=2.14.2",  # Phase 5.7: GHSA-4xgf-cpjx-pc3j
  # Phase 5.7 — security floors for otherwise-transitive packages with known
  # CVEs (kept explicit so a future re-resolve can't silently drop below them).
  "starlette>=1.3.1",           # CVE-2026-48817/48818, PYSEC-2026-161/248/249
  "pyjwt>=2.13.0",              # PYSEC-2026-175..179 (7 advisories)
  "cryptography>=48.0.1",       # GHSA-537c-gmf6-5ccf
  # db
  "sqlalchemy[asyncio]>=2.0.36",
  "psycopg[binary,pool]>=3.2.3",
  "alembic>=1.14.0",
  # auth (Clerk JWT verification)
  "httpx>=0.27.0",
  "python-jose[cryptography]>=3.3.0",
  # job queue
  "arq>=0.26.3",
  # payments (Phase 1 — billing). Imported lazily; only the live billing
  # path uses it, so the app + tests run without it installed locally.
  "stripe>=11.0.0",
  # LLM providers
  "anthropic>=0.40.0",
  "openai>=1.55.0",
  "google-genai>=0.3.0",
  # observability
  "structlog>=24.4.0",
  "sentry-sdk[fastapi]>=2.18.0",
  # trend intelligence
  "pytrends>=4.9.2",
  "pillow>=12.2.0",
  "imageio-ffmpeg>=0.6.0",
  "boto3>=1.43.37",
]

[dependency-groups]
dev = [
  "ruff>=0.8.0",
  "pyright>=1.1.389",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
